Changelog for Yii User Management Module (Yum) 

0.9 wip:

- ENH: added hybridauth support - see docs/hybridauth.txt

New in 0.8 final release:

- Added Avatar Management
- removed Yum::route
- membership: downgrading support
- membership: user can chooses if he want to subscribe to his membership
- yumsettings & yumtextsettings are removed. To adjust the strings for your
application, use Yum::t() or extend from the Yum Classes

2012-06-05: Yum moved to Github !

New in 0.8-rc6:
- Added Gravatar support in Avatar submodule

New in 0.8-rc3:
- Added italian translation (thanks goes to marco@customsoft.it )
- Moved translation strings away from .php files into the database

New in 0.8-rc2:
- Changed available YumUser::status values
- Removed fields group feature. Please overwrite the existing views if you
	need field groups.
- ENH: added a RESTful api (docs/RESTful_api.txt)
- started to make the module clean. The avatar, role, usergroup, membership and messages module are now own submodules.
See docs/avatar.txt and docs/messages.txt on how to use it now. I will do this for all other
submodules step-by-step, too. 

New in 0.8:
- BUGFIX: Dont show if the message has been read by the recipient in my sent
  messages anymore
- Added 'visitors' to profiles (who visited whom when, and display it)
- Added possibility to enable profile visit logs for an user in the privacy
settings (thyseus)
- Added YumUser::STATUS_ACTIVATED (thyseus) (activated but did not log in yet after
actiation)
- Added YumUser::STATUS_REMOVED (thyseus)
- Added new membership system (thyseus)
- Messages with CJuiDialog popup (thyseus)
- Added Documentation about the new, experimental Permission system (thyseus)
- Added ignore users to privacy settings (thyseus)
- Introduced YumMailer (bigchirv)
- reworked messaging System (thyseus)
- Added User privacy settings (thyseus)
- Added Usergroup submodule (thyseus)
- Support for Facebook Connect (bigchirv)